:bug: fix: Margin right on mobile

--- a/css/header.css
+++ b/css/header.css
@@ -1,14 +1,12 @@
 header {
-    width: 100%;
     height: 80px;
-
+    width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
 
     background: rgba(0, 0, 0, 0.12);
     backdrop-filter: blur(2.8px);
-    -webkit-backdrop-filter: blur(2.8px);
 
     position: fixed;
 
