--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,22 @@
     /* border: red 1px solid; */
 }
 
+main {
+    width: 100%;
+}
+
+
+
 html {
     scroll-behavior: smooth;
+    width: 100%;
 }
 :visited {
     color: none;
 }
 body {
     width: 100%;
+    overflow-x: hidden;
     background-color: #030217;
 }
 
